Fixed navbar logo not showing

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,14 +11,6 @@ p {
 
 /* Below this are styles for "Navigation Bar"========================> */
 
-#homeLogo {
-  display: inline;
-  margin: auto;
-  height: 30.54px;
-  width: 153.38px;
-  padding-right: 600px;
-}
-
 #SignIn-bttn {
   background-color: #ffffff;
   color: #a3cb38;
@@ -37,18 +29,62 @@ p {
   display: inline-block;
   border-radius: 5px;
 }
+
+#homeLogo {
+  display: block;
+  float: left;
+  margin-left: 80px;
+  height: 50px;
+  width: 230px;
+  padding-right: 0px;
+}
+
 .navbar {
   display: block;
+  text-align: right;
   list-style-type: none;
-  /* background-color: aqua; */
-  margin: 0 100px 0 100px;
+  background-color: whitesmoke;
+  color: #274266;
+  width: 100%;
   padding: 24px;
   box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.2);
+  position: fixed;
+  top: 0;
+  overflow: hidden;
+}
+
+.navbar ul {
+  margin: 0 20px;
 }
 
 .navbar li {
   display: inline;
   padding: 10px;
+  font-weight: bold;
+}
+
+.navbar a:link {
+  color: #274266;
+  text-decoration: #274266;
+  background-color: transparent;
+}
+
+.navbar a:hover {
+  color: #274266;
+  text-decoration: none;
+  background-color: transparent;
+}
+
+.navbar a:visited {
+  color: #274266;
+  text-decoration: none;
+  background-color: transparent;
+}
+
+.navbar a:active {
+  color: #274266;
+  text-decoration: none;
+  background-color: transparent;
 }
 
 /* Below this are styles for "footer"========================> */
@@ -158,7 +194,7 @@ p {
   display: flex;
   margin: 15px 60px 0 60px;
   text-align: left;
-  border-bottom: #ffffff solid 2px;
+  border-bottom: rgba(150, 150, 150, 0.5) solid 1px;
 }
 
 .bio-wrapper:after {
